--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+.newUserForm{
+  width: 30%
+}
+
+Form{
+  border:1px solid white;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  
+}
+Form label{
+  margin: 2%;
+}
+
+Form button{
+  margin: 2%;
+  max-width: 150px;
+  margin: 32px 0;
+  padding: 12px 20px;
+  border-style: none;
+  background-color: #14586b;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  font-size: 17px;
+  font-weight: 500;
+  color: #fff;
+  cursor: pointer;
+  outline: none;
+  -webkit-appearance: none;
+}
